          skin is specified. This allows developers to create skins that do
          not include the default layer.

      - Replaced copypastemove.rename with adapters to IContainerItemRenamer.
        Instead of `rename(container, oldName, newName)`, one should use
        `IContainerItemRenamer(container).renameItem(oldName, newName)`.

    Bug Fixes

      - Fixed issue #371: OrderedMultiSelectWidget ignores setRenderedValue

      - Fixed issue #360: MultiSelectWidget configured for ISet but creates
                          list
                          
        The correct type of the collection field is now discovered and used.

      - Addressed issue #348: ZCML hides import errors 
 
        I tried really hard to get a better error message, but it is not
        possible, so I just prepended "ImportError:" to the error message.

      - Fixed issue #352: documentation for
        zope.app.form.interfaces.IInputWidget.validate is wrong

      - Fixed issue #317: Relative links don't work in Page Template

      - Fixed issue #335 (debug layer does not work with Zope3-trunk)

      - Fixed issue #338 (zapi help missing from the online help)

      - Fixed issue #349 (Adapter registry doesn't notice __bases__ changes.)

        Thanks to "foom" for the report and the fix.

      - Fixed issue #354 (apidoc: 'SubscriptionRegistration' object has no 
                          attribute 'name')

      - Fixed issue #366 (_zope_interface_coptimizations.c compilation error)

      - Fixed issue #368 (Typo fix in src/zope/app/container/constraints.py)

      - Fixed issue #329 (apidoc + TAL)

      - Object copy events weren't dispatched for object sublocations.

      - When I converted layers and skins to interfaces, I got the layer part
        wrong and made layer interfaces extend `ILayer`. But `ILayer` is an
        `IInterface`, *not* an Interface. Layers should not extend but provide
        `ILayer`.
