@@ -82,6 +82,38 @@ class TestBrowserResponse(TestCase):
             "text/plain")
                      )
 
+    def test_writeDataDirectlyToResponse(self):
+        # In this test we are going to simulate the behavior of a view that
+        # writes its data directly to the output pipe, instead of going
+        # through the entire machinery. This is particularly interesting for
+        # views returning large amount of binary data. 
+        output = StringIO()
+        response = BrowserResponse(output)
+        data = 'My special data.'
+
+        # If you write the data yourself directly, then you are responsible
+        # for setting the status and any other HTTP header yourself as well.
+        response.setHeader('content-type', 'text/plain')
+        response.setHeader('content-length', str(len(data)))
+        response.setStatus(200)
+        
+        # Write the data directly to the output stream from the view
+        response.write(data)
+
+        # Then the view returns `None` and the publisher calls
+        response.setBody(None)
+
+        # Now, if we got here already everything should be fine. The `None`
+        # value for the body should have been ignored and our putput value
+        # should just be our data:
+        self.assertEqual(
+            output.getvalue(),
+            'Status: 200 Ok\r\nContent-Length: 16\r\n'
+            'Content-Type: text/plain;charset=utf-8\r\n'
+            'X-Powered-By: Zope (www.zope.org), Python (www.python.org)\r\n'
+            '\r\n'
+            'My special data.')
+
     def test_interface(self):
         from zope.publisher.interfaces.http import IHTTPResponse
         from zope.publisher.interfaces.http import IHTTPApplicationResponse
