@@ -495,6 +495,9 @@ Zope Changes
 
     Bug Fixes
 
+      - Fixed issue #345: Using response.write should not involve unicode 
+                          conversion
+
       - Fixed issue #371: OrderedMultiSelectWidget ignores setRenderedValue
 
       - Fixed issue #360: MultiSelectWidget configured for ISet but creates
